# pdct

./: .gitignore  ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  INTEGRATION.md  LICENSE  README.md  check_sanitized.sh  install.sh  pyproject.toml
benchmark/: baselines.py  build_v3.py  eval_v3.py  health_probe.py
benchmark/mtrag/: README.md  adapter.py  analyze_leg2.py  build_graph.py  cascade.py  fetch_mtrag.py  gate_check.py  ingest.py  join.py  keyphrase.py  metrics.py  protocol.py  report.py  run_mtrag.py  stats.py
examples/: doctor-questions.json  events.jsonl
hooks/: claude_code_pdct_hook.py  claude_code_pdct_hook.sh
scripts/: dct_read_health.py  pdct_report.py
src/dct/: __init__.py  __main__.py  activation.py  auth.py  classify.py  cli.py  codex_auth.py  composite.py  composite_updater.py  config.py  configure.py  contract.py  distiller.py  doctor.py  event_log.py  events.py  family.py  feedback.py  heat.py  ingest.py  inspect.py  leanctx_obs.py  llm.py  provider_status.py  providers.py  regions.py  replay.py  rules.py  scheduler.py  self_rating.py  service.py  supervisor.py  watch.py
tests/: mock_openai_server.py  test_activation.py  test_capture_source.py  test_cli.py  test_codex_oauth.py  test_configure.py  test_doctor.py  test_event_log.py  test_events.py  test_heat.py  test_ingest.py  test_inspect.py  test_pdct_cli.py  test_read_health.py  test_replay.py  test_service_status.py  test_sibling_valence.py
tests/adapters/: test_claude_code.py  test_telegram.py
tests/judge/: test_daemon_adapter.py  test_enqueue_from_request.py  test_invoker.py  test_queue.py  test_runner.py  test_sampling.py  test_schema.py  test_worker_stub.py
tests/metrics/: test_ablation_cli.py  test_tokens_cli.py  test_utility_cli.py
tests/retrieval/: _graph_helpers.py  conftest.py  test_ablation_flow.py  test_build_config_overrides.py  test_cascade.py  test_ceiling_math.py  test_classifier.py  test_correction_signal.py  test_cosine.py  test_distill_index.py  test_eligibility.py  test_inject.py  test_inject_sections.py  test_integration.py  test_levers_cli.py  test_measurement.py  test_memory_api.py  test_overrides.py  test_preload.py  test_preload_archive_roots.py  test_related.py  (+9 more)
(+119 files in other folders)
