[project]
name = "dct"
version = "0.1.0"
description = "Dynamic Context Traversal — path-dependent activation over an Obsidian vault"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "watchdog>=4.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# Track C — VEC_NEAR embedding edges (optional; graceful fallback if absent)
embeddings = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "local: tests that require local vault state (run with -m local; skipped in CI)",
]

[tool.anyio]
# Enable anyio pytest plugin for async tests

