[project]
name = "dct"
version = "0.1.0"
description = "Dynamic Context Traversal — path-dependent activation over an Obsidian vault"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=4.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
]

[project.scripts]
pdct = "dct.cli:main"

[project.optional-dependencies]
# Anthropic SDK — only needed for the anthropic provider's distiller/judge
# path. Retrieval-only and openai-compatible installs don't need it.
anthropic = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# Track C — VEC_NEAR embedding edges (optional; graceful fallback if absent)
embeddings = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dct.tuning" = ["fixtures/*.json", "fixtures/*.yaml", "fixtures/corpus/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "local: tests that require local vault state (run with -m local; skipped in CI)",
    "slow: long-running benchmark tests",
]

[tool.anyio]
# Enable anyio pytest plugin for async tests

